force-app/main/default/objects/LogEntryEvent__e/fields/ApiVersion__c.field-meta.xml
<CustomField>
    <fullName>ApiVersion__c</fullName>
    <label>API Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>