force-app/main/default/objects/LogEntryEvent__e/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <label>Log Level</label>
    <length>64</length>
    <type>Text</type>
</CustomField>