force-app/main/default/objects/LogEntryEvent__e/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <label>UserEmail</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>